--- a/src/app/calc/calc.html
+++ b/src/app/calc/calc.html
@@ -25,39 +25,40 @@
             </div>
             
             <div class="numbers">
-                <div>
-                    <button class="zero" (click)="inserir('0')">0</button>
-                </div>
-
-                <div>
-                    <button (click)="inserir('1')">1</button>
-                    <button (click)="inserir('2')">2</button>
-                    <button (click)="inserir('3')">3</button>
+                <div class="equal-calc">
+                    <div class="sla">
+                        <div>
+                            <button (click)="inserir('1')">1</button>
+                            <button (click)="inserir('2')">2</button>
+                            <button (click)="inserir('3')">3</button>
+                        </div>
+                        <div class="sla">
+                            <button class="zero" (click)="inserir('0')">0</button>
+                        </div>
+                    </div>
+                    <button class="equal" (click)="resultado()">=</button>
                 </div>
                 
                 <div>
                     <button (click)="inserir('4')">4</button>
                     <button (click)="inserir('5')">5</button>
                     <button (click)="inserir('6')">6</button>
-                </div>
-    
+                    <button (click)="inserir('+')">+</button>
+                    
+                </div>  
+                
                 <div>
                     <button (click)="inserir('7')">7</button>
                     <button (click)="inserir('8')">8</button>
                     <button (click)="inserir('9')">9</button>
+                    <button (click)="inserir('*')">*</button>
                 </div>
-    
-            </div>
-        
-            <div>
-                <button (click)="inserir('+')">+</button>
-                <button (click)="inserir('-')">-</button>
-                <button (click)="inserir('/')">/</button>
-                <button (click)="inserir('*')">*</button>
-                <button (click)="limpar()">C</button>
-                <button (click)="resultado()">=</button>
-                <button (click)="delete()">⬅</button>
-        
+                <div>
+                    <button (click)="inserir('-')">-</button>
+                    <button (click)="inserir('/')">/</button>
+                    <button (click)="delete()">⬅</button>
+                    <button (click)="limpar()">C</button>
+                </div>
             </div>
         </div>
     </main>
